--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,7 @@ h1 {
 }
 
 button {
+  margin: 0.2rem;
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -55,12 +56,14 @@ button:focus-visible {
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
-    background-color: #ffffff;
+    background-color: #fafafa;
   }
   a:hover {
     color: #747bff;
   }
   button {
-    background-color: #f9f9f9;
+    background-color: #d9d9d9;
   }
 }
+
+
