--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,17 @@ main {
 
 .results {
   /*border-right: solid #1a1a1a 1px;*/
+  max-width: 360px;
+}
+
+input {
+  width: 200px;
+  border-radius: 8px;
+  border: 1px solid black;
+  padding: 0.6em 1.2em;
+  font-size: 0.8em;
+  font-weight: 500;
+  font-family: inherit;
 }
 
 h1 {
@@ -35,4 +46,40 @@ h1 {
 h3 {
   color: #c91024;
   margin: 0;
+}
+
+.sequenceCreator input {
+  border-radius: 8px;
+  border: 1px solid black;
+  font-size: 0.8em;
+  font-weight: 500;
+  font-family: inherit;
+  margin-bottom: 10px;
+}
+
+.sequenceText {
+  width: 160px;
+  margin-right: 2px;
+}
+
+.sequenceLength {
+  width: 14px;
+}
+
+.sequenceDelete {
+  margin: 0.2rem;
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0;
+  font-size: 0.8em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: transparent;
+  cursor: pointer;
+  color: #c91024;
+}
+
+.sequenceAdd {
+  color: #c91024;
+  margin-bottom: 1rem;
 }
